3.4_example/calc/CalcParser.c
/** \file
 *  This C source file was generated by $ANTLR version 3.5.2
 *
 *     -  From the grammar source file : Calc.g3
 *     -                            On : 2017-09-26 17:19:21
 *     -                for the parser : CalcParserParser
 *
 * Editing it, at least manually, is not wise.
 *
 * C language generator and runtime by Jim Idle, jimi|hereisanat|idle|dotgoeshere|ws.
 *
 *
*/
// [The "BSD license"]
// Copyright (c) 2005-2009 Jim Idle, Temporal Wave LLC
// http://www.temporal-wave.com
// http://www.linkedin.com/in/jimidle
//
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions
// are met:
// 1. Redistributions of source code must retain the above copyright
//    notice, this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright
//    notice, this list of conditions and the following disclaimer in the
//    documentation and/or other materials provided with the distribution.
// 3. The name of the author may not be used to endorse or promote products
//    derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
// IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
// OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
// IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
// NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

/* -----------------------------------------
 * Include the ANTLR3 generated header file.
 */
#include    "CalcParser.h"
/* ----------------------------------------- */





/* MACROS that hide the C interface implementations from the
 * generated code, which makes it a little more understandable to the human eye.
 * I am very much against using C pre-processor macros for function calls and bits
 * of code as you cannot see what is happening when single stepping in debuggers
 * and so on. The exception (in my book at least) is for generated code, where you are
 * not maintaining it, but may wish to read and understand it. If you single step it, you know that input()
 * hides some indirect calls, but is always referring to the input stream. This is
 * probably more readable than ctx->input->istream->input(snarfle0->blarg) and allows me to rejig
 * the runtime interfaces without changing the generated code too often, without
 * confusing the reader of the generated output, who may not wish to know the gory
 * details of the interface inheritance.
 */

#define		CTX	ctx

/* Aids in accessing scopes for grammar programmers
 */
#undef	SCOPE_TYPE
#undef	SCOPE_STACK
#undef	SCOPE_TOP
#define	SCOPE_TYPE(scope)   pCalcParser_##scope##_SCOPE
#define SCOPE_STACK(scope)  pCalcParser_##scope##Stack
#define	SCOPE_TOP(scope)    ctx->pCalcParser_##scope##Top
#define	SCOPE_SIZE(scope)		ctx->pCalcParser_##scope##Stack_limit
#define SCOPE_INSTANCE(scope, i)	(ctx->SCOPE_STACK(scope)->get(ctx->SCOPE_STACK(scope),i))

/* Macros for accessing things in the parser
 */

#undef	    PARSER
#undef	    RECOGNIZER
#undef	    HAVEPARSEDRULE
#undef		MEMOIZE
#undef	    INPUT
#undef	    STRSTREAM
#undef	    HASEXCEPTION
#undef	    EXCEPTION
#undef	    MATCHT
#undef	    MATCHANYT
#undef	    FOLLOWSTACK
#undef	    FOLLOWPUSH
#undef	    FOLLOWPOP
#undef	    PRECOVER
#undef	    PREPORTERROR
#undef	    LA
#undef	    LT
#undef	    CONSTRUCTEX
#undef	    CONSUME
#undef	    MARK
#undef	    REWIND
#undef	    REWINDLAST
#undef	    PERRORRECOVERY
#undef	    HASFAILED
#undef	    FAILEDFLAG
#undef	    RECOVERFROMMISMATCHEDSET
#undef	    RECOVERFROMMISMATCHEDELEMENT
#undef		INDEX
#undef      ADAPTOR
#undef		SEEK
#undef	    RULEMEMO
#undef		DBG

#define	    PARSER				ctx->pParser
#define	    RECOGNIZER				PARSER->rec
#define	    PSRSTATE				RECOGNIZER->state
#define	    HAVEPARSEDRULE(r)			RECOGNIZER->alreadyParsedRule(RECOGNIZER, r)
#define	    MEMOIZE(ri,si)			RECOGNIZER->memoize(RECOGNIZER, ri, si)
#define	    INPUT				PARSER->tstream
#define	    STRSTREAM				INPUT
#define	    ISTREAM				INPUT->istream
#define	    INDEX()				ISTREAM->index(INPUT->istream)
#define	    HASEXCEPTION()			(PSRSTATE->error == ANTLR3_TRUE)
#define	    EXCEPTION				PSRSTATE->exception
#define	    MATCHT(t, fs)			RECOGNIZER->match(RECOGNIZER, t, fs)
#define	    MATCHANYT()				RECOGNIZER->matchAny(RECOGNIZER)
#define	    FOLLOWSTACK				PSRSTATE->following
#ifdef  SKIP_FOLLOW_SETS
#define	    FOLLOWPUSH(x)
#define	    FOLLOWPOP()
#else
#define	    FOLLOWPUSH(x)			FOLLOWSTACK->push(FOLLOWSTACK, ((void *)(&(x))), NULL)
#define	    FOLLOWPOP()				FOLLOWSTACK->pop(FOLLOWSTACK)
#endif
#define	    PRECOVER()				RECOGNIZER->recover(RECOGNIZER)
#define	    PREPORTERROR()			RECOGNIZER->reportError(RECOGNIZER)
#define	    LA(n)				INPUT->istream->_LA(ISTREAM, n)
#define	    LT(n)				INPUT->_LT(INPUT, n)
#define	    CONSTRUCTEX()			RECOGNIZER->exConstruct(RECOGNIZER)
#define	    CONSUME()				ISTREAM->consume(ISTREAM)
#define	    MARK()				ISTREAM->mark(ISTREAM)
#define	    REWIND(m)				ISTREAM->rewind(ISTREAM, m)
#define	    REWINDLAST()			ISTREAM->rewindLast(ISTREAM)
#define	    SEEK(n)				ISTREAM->seek(ISTREAM, n)
#define	    PERRORRECOVERY			PSRSTATE->errorRecovery
#define	    FAILEDFLAG				PSRSTATE->failed
#define	    HASFAILED()				(FAILEDFLAG == ANTLR3_TRUE)
#define	    BACKTRACKING			PSRSTATE->backtracking
#define	    RECOVERFROMMISMATCHEDSET(s)		RECOGNIZER->recoverFromMismatchedSet(RECOGNIZER, s)
#define	    RECOVERFROMMISMATCHEDELEMENT(e)	RECOGNIZER->recoverFromMismatchedElement(RECOGNIZER, s)
#define     ADAPTOR                         ctx->adaptor
#define		RULEMEMO						PSRSTATE->ruleMemo
#define		DBG								RECOGNIZER->debugger


#define		TOKTEXT(tok, txt)				tok, (pANTLR3_UINT8)txt

/* The 4 tokens defined below may well clash with your own #defines or token types. If so
 * then for the present you must use different names for your defines as these are hard coded
 * in the code generator. It would be better not to use such names internally, and maybe
 * we can change this in a forthcoming release. I deliberately do not #undef these
 * here as this will at least give you a redefined error somewhere if they clash.
 */
#define	    UP	    ANTLR3_TOKEN_UP
#define	    DOWN    ANTLR3_TOKEN_DOWN
#define	    EOR	    ANTLR3_TOKEN_EOR
#define	    INVALID ANTLR3_TOKEN_INVALID


/* =============================================================================
 * Functions to create and destroy scopes. First come the rule scopes, followed
 * by the global declared scopes.
 */



/* ============================================================================= */

/* =============================================================================
 * Start of recognizer
 */


/** \brief Table of all token names in symbolic order, mainly used for
 *         error reporting.
 */
pANTLR3_UINT8   CalcParserTokenNames[8+4]
     = {
        (pANTLR3_UINT8) "<invalid>",       /* String to print to indicate an invalid token */
        (pANTLR3_UINT8) "<EOR>",
        (pANTLR3_UINT8) "<DOWN>",
        (pANTLR3_UINT8) "<UP>",
        (pANTLR3_UINT8) "INT",
        (pANTLR3_UINT8) "MINUS",
        (pANTLR3_UINT8) "NEWLINE",
        (pANTLR3_UINT8) "PLUS",
        (pANTLR3_UINT8) "TIMES",
        (pANTLR3_UINT8) "WS",
        (pANTLR3_UINT8) "'('",
        (pANTLR3_UINT8) "')'"
       };



// Forward declare the locally static matching functions we have generated.
//
static 
 CalcParser_gprog_return
	gprog    (pCalcParser ctx);
static 
 CalcParser_gstat_return
	gstat    (pCalcParser ctx);
static 
 CalcParser_gexpr_return
	gexpr    (pCalcParser ctx);
static 
 CalcParser_gmultExpr_return
	gmultExpr    (pCalcParser ctx);
static 
 CalcParser_gatom_return
	gatom    (pCalcParser ctx);
static void	CalcParserFree(pCalcParser ctx);
static void     CalcParserReset (pCalcParser ctx);

/* For use in tree output where we are accumulating rule labels via label += ruleRef
 * we need a function that knows how to free a return scope when the list is destroyed.
 * We cannot just use ANTLR3_FREE because in debug tracking mode, this is a macro.
 */
static	void ANTLR3_CDECL freeScope(void * scope)
{
    ANTLR3_FREE(scope);
}

/** \brief Name of the grammar file that generated this code
 */
static const char fileName[] = "Calc.g3";

/** \brief Return the name of the grammar file that generated this code.
 */
static const char * getGrammarFileName()
{
	return fileName;
}
/** \brief Create a new CalcParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pCalcParser
CalcParserNew   (pANTLR3_COMMON_TOKEN_STREAM instream)
{
	// See if we can create a new parser with the standard constructor
	//
	return CalcParserNewSSD(instream, NULL);
}

/** \brief Create a new CalcParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pCalcParser
CalcParserNewSSD   (pANTLR3_COMMON_TOKEN_STREAM instream, pANTLR3_RECOGNIZER_SHARED_STATE state)
{
    pCalcParser ctx;	    /* Context structure we will build and return   */

    ctx	= (pCalcParser) ANTLR3_CALLOC(1, sizeof(CalcParser));

    if	(ctx == NULL)
    {
		// Failed to allocate memory for parser context
		//
        return  NULL;
    }

    /* -------------------------------------------------------------------
     * Memory for basic structure is allocated, now to fill in
     * the base ANTLR3 structures. We initialize the function pointers
     * for the standard ANTLR3 parser function set, but upon return
     * from here, the programmer may set the pointers to provide custom
     * implementations of each function.
     *
     * We don't use the macros defined in CalcParser.h here, in order that you can get a sense
     * of what goes where.
     */

    /* Create a base parser/recognizer, using the supplied token stream
     */
    ctx->pParser	    = antlr3ParserNewStream(ANTLR3_SIZE_HINT, instream->tstream, state);
    /* Install the implementation of our CalcParser interface
     */
    ctx->gprog	= gprog;
    ctx->gstat	= gstat;
    ctx->gexpr	= gexpr;
    ctx->gmultExpr	= gmultExpr;
    ctx->gatom	= gatom;
    ctx->free			= CalcParserFree;
    ctx->reset			= CalcParserReset;
    ctx->getGrammarFileName	= getGrammarFileName;

    /* Install the scope pushing methods.
     */
ADAPTOR	= ANTLR3_TREE_ADAPTORNew(instream->tstream->tokenSource->strFactory);

ctx->vectors	= antlr3VectorFactoryNew(0);
    /* Install the token table
     */
    PSRSTATE->tokenNames   = CalcParserTokenNames;


    /* Return the newly built parser to the caller
     */
    return  ctx;
}

static void
CalcParserReset (pCalcParser ctx)
{
    RECOGNIZER->reset(RECOGNIZER);
}

/** Free the parser resources
 */
 static void
 CalcParserFree(pCalcParser ctx)
 {
    /* Free any scope memory
     */

ctx->vectors->close(ctx->vectors);
/* We created the adaptor so we must free it
 */
ADAPTOR->free(ADAPTOR);
	// Free this parser
	//
    ctx->pParser->free(ctx->pParser);


    ANTLR3_FREE(ctx);

    /* Everything is released, so we can return
     */
    return;
 }

/** Return token names used by this 
parser

 *
 * The returned pointer is used as an index into the token names table (using the token
 * number as the index).
 *
 * \return Pointer to first char * in the table.
 */
static pANTLR3_UINT8    *getTokenNames()
{
        return CalcParserTokenNames;
}


/* Declare the bitsets
 */
/** Bitset defining follow set for error recovery in rule state: FOLLOW_gstat_in_gprog45  */
static	ANTLR3_BITWORD FOLLOW_gstat_in_gprog45_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000452) };
static  ANTLR3_BITSET_LIST FOLLOW_gstat_in_gprog45	= { FOLLOW_gstat_in_gprog45_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_gexpr_in_gstat55  */
static	ANTLR3_BITWORD FOLLOW_gexpr_in_gstat55_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000040) };
static  ANTLR3_BITSET_LIST FOLLOW_gexpr_in_gstat55	= { FOLLOW_gexpr_in_gstat55_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_NEWLINE_in_gstat57  */
static	ANTLR3_BITWORD FOLLOW_NEWLINE_in_gstat57_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_NEWLINE_in_gstat57	= { FOLLOW_NEWLINE_in_gstat57_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_NEWLINE_in_gstat65  */
static	ANTLR3_BITWORD FOLLOW_NEWLINE_in_gstat65_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_NEWLINE_in_gstat65	= { FOLLOW_NEWLINE_in_gstat65_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_gmultExpr_in_gexpr73  */
static	ANTLR3_BITWORD FOLLOW_gmultExpr_in_gexpr73_bits[]	= { ANTLR3_UINT64_LIT(0x00000000000000A2) };
static  ANTLR3_BITSET_LIST FOLLOW_gmultExpr_in_gexpr73	= { FOLLOW_gmultExpr_in_gexpr73_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_PLUS_in_gexpr78  */
static	ANTLR3_BITWORD FOLLOW_PLUS_in_gexpr78_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000410) };
static  ANTLR3_BITSET_LIST FOLLOW_PLUS_in_gexpr78	= { FOLLOW_PLUS_in_gexpr78_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_MINUS_in_gexpr83  */
static	ANTLR3_BITWORD FOLLOW_MINUS_in_gexpr83_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000410) };
static  ANTLR3_BITSET_LIST FOLLOW_MINUS_in_gexpr83	= { FOLLOW_MINUS_in_gexpr83_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_gmultExpr_in_gexpr88  */
static	ANTLR3_BITWORD FOLLOW_gmultExpr_in_gexpr88_bits[]	= { ANTLR3_UINT64_LIT(0x00000000000000A2) };
static  ANTLR3_BITSET_LIST FOLLOW_gmultExpr_in_gexpr88	= { FOLLOW_gmultExpr_in_gexpr88_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_gatom_in_gmultExpr96  */
static	ANTLR3_BITWORD FOLLOW_gatom_in_gmultExpr96_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000102) };
static  ANTLR3_BITSET_LIST FOLLOW_gatom_in_gmultExpr96	= { FOLLOW_gatom_in_gmultExpr96_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_TIMES_in_gmultExpr99  */
static	ANTLR3_BITWORD FOLLOW_TIMES_in_gmultExpr99_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000410) };
static  ANTLR3_BITSET_LIST FOLLOW_TIMES_in_gmultExpr99	= { FOLLOW_TIMES_in_gmultExpr99_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_gatom_in_gmultExpr102  */
static	ANTLR3_BITWORD FOLLOW_gatom_in_gmultExpr102_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000102) };
static  ANTLR3_BITSET_LIST FOLLOW_gatom_in_gmultExpr102	= { FOLLOW_gatom_in_gmultExpr102_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_INT_in_gatom110  */
static	ANTLR3_BITWORD FOLLOW_INT_in_gatom110_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_INT_in_gatom110	= { FOLLOW_INT_in_gatom110_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_10_in_gatom114  */
static	ANTLR3_BITWORD FOLLOW_10_in_gatom114_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000410) };
static  ANTLR3_BITSET_LIST FOLLOW_10_in_gatom114	= { FOLLOW_10_in_gatom114_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_gexpr_in_gatom117  */
static	ANTLR3_BITWORD FOLLOW_gexpr_in_gatom117_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000800) };
static  ANTLR3_BITSET_LIST FOLLOW_gexpr_in_gatom117	= { FOLLOW_gexpr_in_gatom117_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_11_in_gatom119  */
static	ANTLR3_BITWORD FOLLOW_11_in_gatom119_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_11_in_gatom119	= { FOLLOW_11_in_gatom119_bits, 1	};


/* ==============================================
 * Parsing rules
 */
/**
 * $ANTLR start gprog
 * Calc.g3:8:1: gprog : ( gstat )+ ;
 */
static CalcParser_gprog_return
gprog(pCalcParser ctx)
{
    CalcParser_gprog_return retval;


    pANTLR3_BASE_TREE root_0;

    CalcParser_gstat_return gstat1;
    #undef	RETURN_TYPE_gstat1
    #define	RETURN_TYPE_gstat1 CalcParser_gstat_return


    /* Initialize rule variables
     */

    root_0 = NULL;

    gstat1.tree = NULL;
    retval.start = LT(1); retval.stop = retval.start;




    retval.tree  = NULL;

    {
        // Calc.g3:8:6: ( ( gstat )+ )
        // Calc.g3:8:8: ( gstat )+
        {
            root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));


            // Calc.g3:8:8: ( gstat )+
            {
                int cnt1=0;

                for (;;)
                {
                    int alt1=2;
            	switch ( LA(1) )
            	{
            	case INT:
            	case NEWLINE:
            	case 10:
            		{
            			alt1=1;
            		}
            	    break;

            	}

            	switch (alt1)
            	{
            	    case 1:
            	        // Calc.g3:8:9: gstat
            	        {
            	            FOLLOWPUSH(FOLLOW_gstat_in_gprog45);
            	            gstat1=gstat(ctx);

            	            FOLLOWPOP();
            	            if  (HASEXCEPTION())
            	            {
            	                goto rulegprogEx;
            	            }

            	            ADAPTOR->addChild(ADAPTOR, root_0, gstat1.tree);

            	            {

            	                    			pANTLR3_STRING s = (gstat1.tree)->toStringTree((gstat1.tree));
            	                    	    printf(" tree %s\n", s->chars);
            	                        
            	            }


            	        }
            	        break;

            	    default:

            		if ( cnt1 >= 1 )
            		{
            		    goto loop1;
            		}
            		/* mismatchedSetEx()
            		 */
            		CONSTRUCTEX();
            		EXCEPTION->type = ANTLR3_EARLY_EXIT_EXCEPTION;
            		EXCEPTION->name = (void *)ANTLR3_EARLY_EXIT_NAME;


            		goto rulegprogEx;
            	}
            	cnt1++;
                }
                loop1: ;	/* Jump to here if this rule does not match */
            }

        }

    }

    // This is where rules clean up and exit
    //
    goto rulegprogEx; /* Prevent compiler warnings */
    rulegprogEx: ;
    retval.stop = LT(-1);


    	retval.stop = LT(-1);

    	retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->rulePostProcessing(ADAPTOR, root_0));
    	ADAPTOR->setTokenBoundaries(ADAPTOR, retval.tree, retval.start, retval.stop);

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
                retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->errorNode(ADAPTOR, INPUT, retval.start, LT(-1), EXCEPTION));
            }
    return retval;
}
/* $ANTLR end gprog */

/**
 * $ANTLR start gstat
 * Calc.g3:12:1: gstat : ( gexpr NEWLINE -> gexpr | NEWLINE ->);
 */
static CalcParser_gstat_return
gstat(pCalcParser ctx)
{
    CalcParser_gstat_return retval;


    pANTLR3_BASE_TREE root_0;

    pANTLR3_COMMON_TOKEN    NEWLINE3;
    pANTLR3_COMMON_TOKEN    NEWLINE4;
    CalcParser_gexpr_return gexpr2;
    #undef	RETURN_TYPE_gexpr2
    #define	RETURN_TYPE_gexpr2 CalcParser_gexpr_return

    pANTLR3_BASE_TREE NEWLINE3_tree;
    pANTLR3_BASE_TREE NEWLINE4_tree;
    pANTLR3_REWRITE_RULE_TOKEN_STREAM stream_NEWLINE;
    pANTLR3_REWRITE_RULE_SUBTREE_STREAM stream_gexpr;
    /* Initialize rule variables
     */

    root_0 = NULL;

    NEWLINE3       = NULL;
    NEWLINE4       = NULL;
    gexpr2.tree = NULL;
    retval.start = LT(1); retval.stop = retval.start;


    NEWLINE3_tree   = NULL;
    NEWLINE4_tree   = NULL;

    stream_NEWLINE   = NULL;
    #define CREATE_stream_NEWLINE  if (stream_NEWLINE == NULL) {stream_NEWLINE = antlr3RewriteRuleTOKENStreamNewAE(ADAPTOR, RECOGNIZER, (pANTLR3_UINT8)"token NEWLINE"); } 
    stream_gexpr   = NULL;
    #define CREATE_stream_gexpr  if (stream_gexpr == NULL) {stream_gexpr = antlr3RewriteRuleSubtreeStreamNewAE(ADAPTOR, RECOGNIZER, (pANTLR3_UINT8)"rule gexpr"); }

    retval.tree  = NULL;

    {
        {
            //  Calc.g3:12:6: ( gexpr NEWLINE -> gexpr | NEWLINE ->)

            ANTLR3_UINT32 alt2;

            alt2=2;

            switch ( LA(1) )
            {
            case INT:
            case 10:
            	{
            		alt2=1;
            	}
                break;
            case NEWLINE:
            	{
            		alt2=2;
            	}
                break;

            default:
                CONSTRUCTEX();
                EXCEPTION->type         = ANTLR3_NO_VIABLE_ALT_EXCEPTION;
                EXCEPTION->message      = (void *)"";
                EXCEPTION->decisionNum  = 2;
                EXCEPTION->state        = 0;


                goto rulegstatEx;

            }

            switch (alt2)
            {
        	case 1:
        	    // Calc.g3:12:8: gexpr NEWLINE
        	    {
        	        FOLLOWPUSH(FOLLOW_gexpr_in_gstat55);
        	        gexpr2=gexpr(ctx);

        	        FOLLOWPOP();
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulegstatEx;
        	        }

        	        CREATE_stream_gexpr; stream_gexpr->add(stream_gexpr, gexpr2.tree, NULL);

        	        NEWLINE3 = (pANTLR3_COMMON_TOKEN) MATCHT(NEWLINE, &FOLLOW_NEWLINE_in_gstat57);
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulegstatEx;
        	        }
        	         
        	        CREATE_stream_NEWLINE; stream_NEWLINE->add(stream_NEWLINE, NEWLINE3, NULL);


        	        /* AST REWRITE
        	         * elements          : gexpr
        	         * token labels      : 
        	         * rule labels       : retval
        	         * token list labels : 
        	         * rule list labels  : 
        	         */
        	        {
        	        	pANTLR3_REWRITE_RULE_SUBTREE_STREAM stream_retval;

        	        	stream_retval=antlr3RewriteRuleSubtreeStreamNewAEE(ADAPTOR,  RECOGNIZER, (pANTLR3_UINT8)"token retval", retval.tree != NULL ? retval.tree : NULL);

        	        	root_0			    = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));
        	        	retval.tree    = root_0;
        	        	// 12:22: -> gexpr
        	        	{
        	        	    ADAPTOR->addChild(ADAPTOR, root_0, stream_gexpr == NULL ? NULL : stream_gexpr->nextTree(stream_gexpr));

        	        	}


        	        	retval.tree = root_0; // set result root
        	        	if (stream_retval != NULL) stream_retval->free(stream_retval);


        	        }
        	    }
        	    break;
        	case 2:
        	    // Calc.g3:12:33: NEWLINE
        	    {
        	        NEWLINE4 = (pANTLR3_COMMON_TOKEN) MATCHT(NEWLINE, &FOLLOW_NEWLINE_in_gstat65);
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulegstatEx;
        	        }
        	         
        	        CREATE_stream_NEWLINE; stream_NEWLINE->add(stream_NEWLINE, NEWLINE4, NULL);


        	        /* AST REWRITE
        	         * elements          : 
        	         * token labels      : 
        	         * rule labels       : retval
        	         * token list labels : 
        	         * rule list labels  : 
        	         */
        	        {
        	        	pANTLR3_REWRITE_RULE_SUBTREE_STREAM stream_retval;

        	        	stream_retval=antlr3RewriteRuleSubtreeStreamNewAEE(ADAPTOR,  RECOGNIZER, (pANTLR3_UINT8)"token retval", retval.tree != NULL ? retval.tree : NULL);

        	        	root_0			    = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));
        	        	retval.tree    = root_0;
        	        	// 12:41: ->
        	        	{
        	        	    root_0 = NULL; /* <-- rewriteEmptyAlt()) */
        	        	}


        	        	retval.tree = root_0; // set result root
        	        	if (stream_retval != NULL) stream_retval->free(stream_retval);


        	        }
        	    }
        	    break;

            }
        }
    }

    // This is where rules clean up and exit
    //
    goto rulegstatEx; /* Prevent compiler warnings */
    rulegstatEx: ;
    retval.stop = LT(-1);


    	retval.stop = LT(-1);

    	retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->rulePostProcessing(ADAPTOR, root_0));
    	ADAPTOR->setTokenBoundaries(ADAPTOR, retval.tree, retval.start, retval.stop);
        if (stream_NEWLINE != NULL) stream_NEWLINE->free(stream_NEWLINE);
        if (stream_gexpr != NULL) stream_gexpr->free(stream_gexpr);

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
                retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->errorNode(ADAPTOR, INPUT, retval.start, LT(-1), EXCEPTION));
            }
    return retval;
}
/* $ANTLR end gstat */

/**
 * $ANTLR start gexpr
 * Calc.g3:13:1: gexpr : gmultExpr ( ( PLUS ^| MINUS ^) gmultExpr )* ;
 */
static CalcParser_gexpr_return
gexpr(pCalcParser ctx)
{
    CalcParser_gexpr_return retval;


    pANTLR3_BASE_TREE root_0;

    pANTLR3_COMMON_TOKEN    PLUS6;
    pANTLR3_COMMON_TOKEN    MINUS7;
    CalcParser_gmultExpr_return gmultExpr5;
    #undef	RETURN_TYPE_gmultExpr5
    #define	RETURN_TYPE_gmultExpr5 CalcParser_gmultExpr_return

    CalcParser_gmultExpr_return gmultExpr8;
    #undef	RETURN_TYPE_gmultExpr8
    #define	RETURN_TYPE_gmultExpr8 CalcParser_gmultExpr_return

    pANTLR3_BASE_TREE PLUS6_tree;
    pANTLR3_BASE_TREE MINUS7_tree;

    /* Initialize rule variables
     */

    root_0 = NULL;

    PLUS6       = NULL;
    MINUS7       = NULL;
    gmultExpr5.tree = NULL;

    gmultExpr8.tree = NULL;
    retval.start = LT(1); retval.stop = retval.start;


    PLUS6_tree   = NULL;
    MINUS7_tree   = NULL;


    retval.tree  = NULL;

    {
        // Calc.g3:13:6: ( gmultExpr ( ( PLUS ^| MINUS ^) gmultExpr )* )
        // Calc.g3:13:8: gmultExpr ( ( PLUS ^| MINUS ^) gmultExpr )*
        {
            root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));


            FOLLOWPUSH(FOLLOW_gmultExpr_in_gexpr73);
            gmultExpr5=gmultExpr(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto rulegexprEx;
            }

            ADAPTOR->addChild(ADAPTOR, root_0, gmultExpr5.tree);

            // Calc.g3:13:18: ( ( PLUS ^| MINUS ^) gmultExpr )*

            for (;;)
            {
                int alt4=2;
                switch ( LA(1) )
                {
                case MINUS:
                case PLUS:
                	{
                		alt4=1;
                	}
                    break;

                }

                switch (alt4)
                {
            	case 1:
            	    // Calc.g3:13:19: ( PLUS ^| MINUS ^) gmultExpr
            	    {
            	        // Calc.g3:13:19: ( PLUS ^| MINUS ^)
            	        {
            	            int alt3=2;
            	            switch ( LA(1) )
            	            {
            	            case PLUS:
            	            	{
            	            		alt3=1;
            	            	}
            	                break;
            	            case MINUS:
            	            	{
            	            		alt3=2;
            	            	}
            	                break;

            	            default:
            	                CONSTRUCTEX();
            	                EXCEPTION->type         = ANTLR3_NO_VIABLE_ALT_EXCEPTION;
            	                EXCEPTION->message      = (void *)"";
            	                EXCEPTION->decisionNum  = 3;
            	                EXCEPTION->state        = 0;


            	                goto rulegexprEx;

            	            }

            	            switch (alt3)
            	            {
            	        	case 1:
            	        	    // Calc.g3:13:21: PLUS ^
            	        	    {
            	        	        PLUS6 = (pANTLR3_COMMON_TOKEN) MATCHT(PLUS, &FOLLOW_PLUS_in_gexpr78);
            	        	        if  (HASEXCEPTION())
            	        	        {
            	        	            goto rulegexprEx;
            	        	        }

            	        	        PLUS6_tree = 
            	        	        (pANTLR3_BASE_TREE)(ADAPTOR->create(ADAPTOR, PLUS6))
            	        	        ;
            	        	        root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->becomeRoot(ADAPTOR, PLUS6_tree, root_0));


            	        	    }
            	        	    break;
            	        	case 2:
            	        	    // Calc.g3:13:29: MINUS ^
            	        	    {
            	        	        MINUS7 = (pANTLR3_COMMON_TOKEN) MATCHT(MINUS, &FOLLOW_MINUS_in_gexpr83);
            	        	        if  (HASEXCEPTION())
            	        	        {
            	        	            goto rulegexprEx;
            	        	        }

            	        	        MINUS7_tree = 
            	        	        (pANTLR3_BASE_TREE)(ADAPTOR->create(ADAPTOR, MINUS7))
            	        	        ;
            	        	        root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->becomeRoot(ADAPTOR, MINUS7_tree, root_0));


            	        	    }
            	        	    break;

            	            }
            	        }
